// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildRenderPlan a clip with a banner overlays the rasterised banner for its own window 1`] = `
[
  {
    "args": [
      "-nostdin",
      "-y",
      "-accurate_seek",
      "-ss",
      "0.000",
      "-to",
      "10.000",
      "-i",
      "/media/asset-1.mp4",
      "-loop",
      "1",
      "-t",
      "10.000",
      "-i",
      "/work/banner-0.png",
      "-filter_complex",
      "[0:v]scale=1920:1080:force_original_aspect_ratio=decrease:flags=lanczos,pad=1920:1080:(ow-iw)/2:(oh-ih)/2:color=black,setsar=1[v0];[1:v]format=rgba,fade=t=in:st=2.000:d=0.300:alpha=1,fade=t=out:st=6.700:d=0.300:alpha=1[o0];[v0][o0]overlay=0:0:enable='between(t,2.000,7.000)'[v1]",
      "-map",
      "[v1]",
      "-map",
      "0:a?",
      "-fps_mode",
      "cfr",
      "-r",
      "30",
      "-c:v",
      "libx264",
      "-preset",
      "medium",
      "-crf",
      "20",
      "-g",
      "60",
      "-keyint_min",
      "60",
      "-sc_threshold",
      "0",
      "-pix_fmt",
      "yuv420p",
      "-c:a",
      "aac",
      "-b:a",
      "128k",
      "-af",
      "aresample=async=1:first_pts=0",
      "-movflags",
      "+faststart",
      "/work/clip-0.mp4",
    ],
    "label": "clip 0 (source asset-1)",
    "output": "/work/clip-0.mp4",
  },
  {
    "args": [
      "-nostdin",
      "-y",
      "-f",
      "concat",
      "-safe",
      "0",
      "-i",
      "/work/concat.txt",
      "-c:v",
      "copy",
      "-c:a",
      "copy",
      "-movflags",
      "+faststart",
      "/work/out.mp4",
    ],
    "label": "join 1 clip (concat)",
    "output": "/work/out.mp4",
  },
]
`;

exports[`buildRenderPlan a narration take mixes the take into the join in programme time 1`] = `
{
  "args": [
    "-nostdin",
    "-y",
    "-f",
    "concat",
    "-safe",
    "0",
    "-i",
    "/work/concat.txt",
    "-i",
    "/media/voice-1.m4a",
    "-filter_complex",
    "[1:a]atrim=0.000:4.000,asetpts=PTS-STARTPTS,volume=0.8,adelay=1500|1500[n0];[0:a][n0]amix=inputs=2:normalize=0:dropout_transition=0,apad,atrim=0:10.000[a]",
    "-map",
    "0:v",
    "-map",
    "[a]",
    "-c:v",
    "copy",
    "-c:a",
    "aac",
    "-b:a",
    "128k",
    "-movflags",
    "+faststart",
    "/work/out.mp4",
  ],
  "label": "join 1 clip (concat)",
  "output": "/work/out.mp4",
}
`;

exports[`buildRenderPlan a single source clip encodes the clip and then joins with the concat demuxer 1`] = `
[
  {
    "args": [
      "-nostdin",
      "-y",
      "-accurate_seek",
      "-ss",
      "2.000",
      "-to",
      "12.000",
      "-i",
      "/media/asset-1.mp4",
      "-filter_complex",
      "[0:v]scale=1920:1080:force_original_aspect_ratio=decrease:flags=lanczos,pad=1920:1080:(ow-iw)/2:(oh-ih)/2:color=black,setsar=1[v0]",
      "-map",
      "[v0]",
      "-map",
      "0:a?",
      "-fps_mode",
      "cfr",
      "-r",
      "30",
      "-c:v",
      "libx264",
      "-preset",
      "medium",
      "-crf",
      "20",
      "-g",
      "60",
      "-keyint_min",
      "60",
      "-sc_threshold",
      "0",
      "-pix_fmt",
      "yuv420p",
      "-c:a",
      "aac",
      "-b:a",
      "128k",
      "-af",
      "aresample=async=1:first_pts=0",
      "-movflags",
      "+faststart",
      "/work/clip-0.mp4",
    ],
    "label": "clip 0 (source asset-1)",
    "output": "/work/clip-0.mp4",
  },
  {
    "args": [
      "-nostdin",
      "-y",
      "-f",
      "concat",
      "-safe",
      "0",
      "-i",
      "/work/concat.txt",
      "-c:v",
      "copy",
      "-c:a",
      "copy",
      "-movflags",
      "+faststart",
      "/work/out.mp4",
    ],
    "label": "join 1 clip (concat)",
    "output": "/work/out.mp4",
  },
]
`;

exports[`buildRenderPlan a title card between two clips generates a background and overlays the card 1`] = `
[
  {
    "args": [
      "-nostdin",
      "-y",
      "-accurate_seek",
      "-ss",
      "0.000",
      "-to",
      "4.000",
      "-i",
      "/media/asset-1.mp4",
      "-filter_complex",
      "[0:v]scale=1920:1080:force_original_aspect_ratio=decrease:flags=lanczos,pad=1920:1080:(ow-iw)/2:(oh-ih)/2:color=black,setsar=1[v0]",
      "-map",
      "[v0]",
      "-map",
      "0:a?",
      "-fps_mode",
      "cfr",
      "-r",
      "30",
      "-c:v",
      "libx264",
      "-preset",
      "medium",
      "-crf",
      "20",
      "-g",
      "60",
      "-keyint_min",
      "60",
      "-sc_threshold",
      "0",
      "-pix_fmt",
      "yuv420p",
      "-c:a",
      "aac",
      "-b:a",
      "128k",
      "-af",
      "aresample=async=1:first_pts=0",
      "-movflags",
      "+faststart",
      "/work/clip-0.mp4",
    ],
    "label": "clip 0 (source asset-1)",
    "output": "/work/clip-0.mp4",
  },
  {
    "args": [
      "-nostdin",
      "-y",
      "-f",
      "lavfi",
      "-t",
      "3.000",
      "-i",
      "color=c=black:s=1920x1080:r=30",
      "-f",
      "lavfi",
      "-t",
      "3.000",
      "-i",
      "anullsrc=channel_layout=stereo:sample_rate=48000",
      "-loop",
      "1",
      "-t",
      "3.000",
      "-i",
      "/work/title-1.png",
      "-filter_complex",
      "[0:v]setsar=1[v0];[2:v]format=rgba[o0];[v0][o0]overlay=0:0[v1]",
      "-map",
      "[v1]",
      "-map",
      "1:a",
      "-fps_mode",
      "cfr",
      "-r",
      "30",
      "-c:v",
      "libx264",
      "-preset",
      "medium",
      "-crf",
      "20",
      "-g",
      "60",
      "-keyint_min",
      "60",
      "-sc_threshold",
      "0",
      "-pix_fmt",
      "yuv420p",
      "-c:a",
      "aac",
      "-b:a",
      "128k",
      "-af",
      "aresample=async=1:first_pts=0",
      "-movflags",
      "+faststart",
      "/work/clip-1.mp4",
    ],
    "label": "clip 1 (title "Attendance")",
    "output": "/work/clip-1.mp4",
  },
  {
    "args": [
      "-nostdin",
      "-y",
      "-accurate_seek",
      "-ss",
      "0.000",
      "-to",
      "5.000",
      "-i",
      "/media/asset-2.mp4",
      "-filter_complex",
      "[0:v]scale=1920:1080:force_original_aspect_ratio=decrease:flags=lanczos,pad=1920:1080:(ow-iw)/2:(oh-ih)/2:color=black,setsar=1[v0]",
      "-map",
      "[v0]",
      "-map",
      "0:a?",
      "-fps_mode",
      "cfr",
      "-r",
      "30",
      "-c:v",
      "libx264",
      "-preset",
      "medium",
      "-crf",
      "20",
      "-g",
      "60",
      "-keyint_min",
      "60",
      "-sc_threshold",
      "0",
      "-pix_fmt",
      "yuv420p",
      "-c:a",
      "aac",
      "-b:a",
      "128k",
      "-af",
      "aresample=async=1:first_pts=0",
      "-movflags",
      "+faststart",
      "/work/clip-2.mp4",
    ],
    "label": "clip 2 (source asset-2)",
    "output": "/work/clip-2.mp4",
  },
  {
    "args": [
      "-nostdin",
      "-y",
      "-f",
      "concat",
      "-safe",
      "0",
      "-i",
      "/work/concat.txt",
      "-c:v",
      "copy",
      "-c:a",
      "copy",
      "-movflags",
      "+faststart",
      "/work/out.mp4",
    ],
    "label": "join 3 clips (concat)",
    "output": "/work/out.mp4",
  },
]
`;

exports[`buildRenderPlan mixes narration into an xfade join after the clip inputs 1`] = `
[
  "-nostdin",
  "-y",
  "-i",
  "/work/clip-0.mp4",
  "-i",
  "/work/clip-1.mp4",
  "-i",
  "/media/voice-1.m4a",
  "-filter_complex",
  "[0:v][1:v]xfade=transition=fade:duration=1.000:offset=3.000[v1];[0:a][1:a]acrossfade=d=1.000[a1];[2:a]atrim=0.000:4.000,asetpts=PTS-STARTPTS,volume=1,adelay=1500|1500[n0];[a1][n0]amix=inputs=2:normalize=0:dropout_transition=0,apad,atrim=0:9.000[a]",
  "-map",
  "[v1]",
  "-map",
  "[a]",
  "-fps_mode",
  "cfr",
  "-r",
  "30",
  "-c:v",
  "libx264",
  "-preset",
  "medium",
  "-crf",
  "20",
  "-g",
  "60",
  "-keyint_min",
  "60",
  "-sc_threshold",
  "0",
  "-pix_fmt",
  "yuv420p",
  "-c:a",
  "aac",
  "-b:a",
  "128k",
  "-movflags",
  "+faststart",
  "/work/out.mp4",
]
`;

exports[`buildRenderPlan two clips with a crossfade joins them with an xfade chain 1`] = `
[
  {
    "args": [
      "-nostdin",
      "-y",
      "-accurate_seek",
      "-ss",
      "0.000",
      "-to",
      "4.000",
      "-i",
      "/media/asset-1.mp4",
      "-filter_complex",
      "[0:v]scale=1920:1080:force_original_aspect_ratio=decrease:flags=lanczos,pad=1920:1080:(ow-iw)/2:(oh-ih)/2:color=black,setsar=1[v0]",
      "-map",
      "[v0]",
      "-map",
      "0:a?",
      "-fps_mode",
      "cfr",
      "-r",
      "30",
      "-c:v",
      "libx264",
      "-preset",
      "medium",
      "-crf",
      "20",
      "-g",
      "60",
      "-keyint_min",
      "60",
      "-sc_threshold",
      "0",
      "-pix_fmt",
      "yuv420p",
      "-c:a",
      "aac",
      "-b:a",
      "128k",
      "-af",
      "aresample=async=1:first_pts=0",
      "-movflags",
      "+faststart",
      "/work/clip-0.mp4",
    ],
    "label": "clip 0 (source asset-1)",
    "output": "/work/clip-0.mp4",
  },
  {
    "args": [
      "-nostdin",
      "-y",
      "-accurate_seek",
      "-ss",
      "0.000",
      "-to",
      "6.000",
      "-i",
      "/media/asset-2.mp4",
      "-filter_complex",
      "[0:v]scale=1920:1080:force_original_aspect_ratio=decrease:flags=lanczos,pad=1920:1080:(ow-iw)/2:(oh-ih)/2:color=black,setsar=1[v0]",
      "-map",
      "[v0]",
      "-map",
      "0:a?",
      "-fps_mode",
      "cfr",
      "-r",
      "30",
      "-c:v",
      "libx264",
      "-preset",
      "medium",
      "-crf",
      "20",
      "-g",
      "60",
      "-keyint_min",
      "60",
      "-sc_threshold",
      "0",
      "-pix_fmt",
      "yuv420p",
      "-c:a",
      "aac",
      "-b:a",
      "128k",
      "-af",
      "aresample=async=1:first_pts=0",
      "-movflags",
      "+faststart",
      "/work/clip-1.mp4",
    ],
    "label": "clip 1 (source asset-2)",
    "output": "/work/clip-1.mp4",
  },
  {
    "args": [
      "-nostdin",
      "-y",
      "-i",
      "/work/clip-0.mp4",
      "-i",
      "/work/clip-1.mp4",
      "-filter_complex",
      "[0:v][1:v]xfade=transition=fade:duration=1.000:offset=3.000[v1];[0:a][1:a]acrossfade=d=1.000[a1]",
      "-map",
      "[v1]",
      "-map",
      "[a1]",
      "-fps_mode",
      "cfr",
      "-r",
      "30",
      "-c:v",
      "libx264",
      "-preset",
      "medium",
      "-crf",
      "20",
      "-g",
      "60",
      "-keyint_min",
      "60",
      "-sc_threshold",
      "0",
      "-pix_fmt",
      "yuv420p",
      "-c:a",
      "aac",
      "-b:a",
      "128k",
      "-movflags",
      "+faststart",
      "/work/out.mp4",
    ],
    "label": "join 2 clips (xfade)",
    "output": "/work/out.mp4",
  },
]
`;
